<resources>
    <string name="app_name">News Buddy</string>
    <string name="menu_title_labels">Темы</string>
    <string name="menu_title_feed">Лента</string>
    <string name="menu_title_bookmark">Закладки</string>
    <string name="filter_title">Фильтр</string>
    <string name="btn_themes_add_tag">Добавить новый тэг</string>
    <string name="text_themes_empty_title">Нет тем</string>
    <string name="text_themes_empty_subtitle">Нажмите «+» для создания темы</string>
    <string name="menu_theme_delete">Удалить тему</string>
    <string name="menu_theme_edit">Редактировать тему</string>
    <string name="success_theme_delete">Тема удалена</string>
    <string name="success_theme_add">Тема добавлена</string>
    <string name="success_theme_update">Тема обновлена</string>
    <string name="error_theme_delete">Не удалось удалить тему</string>
    <string name="error_theme_add">Не удалось добавить тему</string>
    <string name="error_theme_update">Не удалось обновить тему</string>
    <string name="dialog_decline_add_theme">Отмена</string>
    <string name="dialog_add_theme">Добавить</string>
    <string name="dialog_add_theme_title">Добавить новую тему</string>
    <string name="hint_add_theme">Введите название темы</string>
    <string name="warn_empty_add_theme">Пожайлуста, введите название темы</string>
    <string name="warn_empty_add_tag">Пожайлуста, введите название тэга</string>
    <string name="text_empty_tag_list">Нет тегов.\nИспользуйте контекстное меню для добавления тегов.</string>
    <string name="menu_theme_add_tag">Добавить тэг</string>
    <string name="dialog_edit_theme_title">Изменить тему</string>
    <string name="dialog_edit_theme">Сохранить</string>
    <string name="dialog_decline_edit_theme">Отмена</string>
    <string name="dialog_add_tag_title">Добавить новый тэг</string>
    <string name="dialog_decline_add_tag">Отмена</string>
    <string name="dialog_add_tag">Добавить</string>
    <string name="hint_add_tag">Введите название тэга</string>

    <string name="success_tag_delete">Тэг удален</string>
    <string name="success_tag_add">Тэг добавлен</string>
    <string name="success_tag_update">Тэг обновлен</string>
    <string name="error_tag_delete">Не удалось удалить тэг</string>
    <string name="error_tag_add">Не удалось добавить тэг</string>
    <string name="error_tag_update">Не удалось обновить тэг</string>

    <string name="dialog_edit_tag_title">Изменить тэг</string>
    <string name="dialog_edit_tag">Сохранить</string>
    <string name="dialog_decline_edit_tag">Отмена</string>
    <string name="text_open_in_web">Открыть в браузере</string>
    <string name="text_add_to_bookmark">Добавить в закладки</string>
    <string name="fab_go_to_feed">Перейти к ленте</string>
    <string name="empty_tag_filter">нет тэгов</string>
    <string name="empty_tag_filter_sub">Добавьте хотя бы один тэг</string>
    <string name="share_via">Отправить личное сообщение</string>
    <string name="share_more_link">\n\nПодробнее: %s</string>
    <string name="shared_from">\n\nОтправлено из %s</string>

    <string name="empty_picked_tags">Тэги не выбраны</string>
    <string name="empty_picked_tags_sub">Выберите хотя бы один тэг</string>
    <string name="empty_news">нет новостей</string>
    <string name="empty_news_sub">По данным тэгам новости не найдены</string>
    <string name="error_network">Что-то пошло не так</string>
    <string name="error_network_sub">Проверьте настройки интернет соединения</string>
</resources>
